# logger

./: AndroidDebugLogCatSink.cpp  CMakeLists.txt  README.md  main.cpp
src/: AndroidDebugLogCatSink.h  logger.cpp  logger.h  logger_internal.h
src/utests/: test_logger.cpp
